# OOP_labs

./: CMakeLists.txt  Makefile  README.md  oop_labs.code-workspace
.github/workflows/: main.yml
Lab6/: CMakeLists.txt
Lab6/test/: test.cpp
lab1/: CMakeLists.txt  main.cpp
lab1/src/: ReplaceNthOccurrence.cpp
lab1/tests/: tests.cpp
lab2/: CMakeLists.txt  main.cpp
lab2/include/: bitstring.h
lab2/src/: bitstring.cpp
lab2/tests/: tests_bitstring.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/include/: Array.h  Figure.h  Hexagon.h  Octagon.h  Pentagon.h
lab3/src/: Array.cpp  Hexagon.cpp  Octagon.cpp  Pentagon.cpp
lab3/tests/: testsFigures.cpp
lab4/: CmakeLists.txt
lab4/include/: array.hpp  figure.hpp  functions.hpp  hexagon.hpp  octagon.hpp  pentagon.hpp
lab4/src/: main.cpp
lab4/tests/: tests.cpp
lab5/: CMakeLists.txt  main.cpp
lab5/include/: FixedBlockMemoryResource.h  PmrList.h
lab5/src/: FixedBlockMemoryResource.cpp
lab5/tests/: tests.cpp
lab7/: CMakeLists.txt  main.cpp
lab7/npc/: npc.cpp  npc.h  slaveTrader.cpp  slaveTrader.h  squirrel.cpp  squirrel.h  wanderingKnight.cpp  wanderingKnight.h
lab7/patterns/: factory.cpp  factory.h  observer.cpp  observer.h  visitor.cpp  visitor.h
lab7/point/: point.h
lab7/tests/: tests.cpp
